--- a/Anjali-cakeshop/package.json
+++ b/Anjali-cakeshop/package.json
@@ -7,7 +7,12 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "moment": "^2.29.1",
+    "mongodb": "^3.6.6",
+    "path": "^0.12.7",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -19,11 +24,7 @@
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^7.0.3",
     "redux": "^4.0.5",
-    "web-vitals": "^1.1.0",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "path": "^0.12.7"
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
