--- a/Anjali-cakeshop/package.json
+++ b/Anjali-cakeshop/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
@@ -22,7 +23,6 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-star-ratings": "^2.3.0",
     "react-toastify": "^7.0.3",
     "redux": "^4.0.5",
     "web-vitals": "^1.1.0"
